# PyQt6-stubs

./: .copier-answers.yml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/PyQt6-stubs/: __init__.py
