[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# https://peps.python.org/pep-0621/
[project]
name = "PyQt6-stubs"
version = "6.7.3"
description = "PEP 561 stub-only package for PyQt6"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPLv3" }
classifiers = ["Programming Language :: Python :: 3", "Typing :: Typed"]
dependencies = []


[project.urls]
homepage = "https://github.com/tlambert03/PyQt6-stubs"
repository = "https://github.com/tlambert03/PyQt6-stubs"
